Add LTR no-flip row advance option to generator

--- a/templates/index.html
+++ b/templates/index.html
@@ -364,6 +364,7 @@
                   <option value="turn90">Klasyczne: obrót 90 + przejazd prostopadły</option>
                   <option value="real90">REAL 90: przejazdy prostopadłe, rzędy równoległe</option>
                   <option value="zigzag">ZigZag: powrót tyłem</option>
+                  <option value="ltr_noflip">LTR bez 180° (powrót tyłem)</option>
                 </select>
               </div>
             </div>
@@ -725,6 +726,7 @@
                   <option value="turn90">Klasyczne: obrót 90 + przejazd prostopadły</option>
                   <option value="real90">REAL 90: przejazdy prostopadłe, rzędy równoległe</option>
                   <option value="zigzag">ZigZag: powrót tyłem</option>
+                  <option value="ltr_noflip">LTR bez 180° (powrót tyłem)</option>
                 </select>
               </div>
             </div>
